syntax = "proto3";

package safeheron.proto;
import "curve_point.proto";

message DLogProof{
    CurvePoint pk = 1;
    CurvePoint g_r = 2;
    string res = 3;
}

message HegProof{
    CurvePoint T = 1;
    CurvePoint A3 = 2;
    string z1 = 3;
    string z2 = 4;
}

message PailProof{
    repeated string y_N_arr = 1;
}

message AliceRangeProof{
    string z = 1;
    string u = 2;
    string w = 3;
    string s = 4;
    string s1 = 5;
    string s2 = 6;
}

message DLNProof{
    repeated string alpha_arr = 1;
    repeated string t_arr = 2;
}

